Live Unwrap leaks memory #32402

Closed
opened 2012-08-24 16:40:00 +02:00 by Tobias Oelgarte · 5 comments

%%%If i unwrap a larger mesh (2500 Faces) and use live unwrapping to adjust details blender starts to consume more and more memory without releasing it. The internal memory counter says that blender would be using roughly 250 MB, but if i look at the process list it consumes already 1,5 GB.%%%

%%%If i unwrap a larger mesh (2500 Faces) and use live unwrapping to adjust details blender starts to consume more and more memory without releasing it. The internal memory counter says that blender would be using roughly 250 MB, but if i look at the process list it consumes already 1,5 GB.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm not seeing this, on a 10k mesh it keeps adding some memory until the undo stack is filled, but the Blender process memory usage never goes above 200MB. That's on OS X with latest svn.

Probably would need a .blend, operating system used and more detailed instructions on what exactly you are doing. There are also two Live Unwrap options, one in the UV editor and one in the 3D view.%%%

%%%I'm not seeing this, on a 10k mesh it keeps adding some memory until the undo stack is filled, but the Blender process memory usage never goes above 200MB. That's on OS X with latest svn. Probably would need a .blend, operating system used and more detailed instructions on what exactly you are doing. There are also two Live Unwrap options, one in the UV editor and one in the 3D view.%%%

%%%I appended a example blend file in which the memory increases over time. It started as soon i switched to cycles and have the texture displayed in the viewport. It could mean that the viewport update (uv change) causes the memory leak.

All i need to do is grab a pinned vertex again and again. If i grab one from the bigger part the memory goes up by roughly 2 MB every time. If i grab the head part by 300 KB. I purposely tried it very often to be sure to reach the undo limit. But even after i reached it the memory consumption still increases.

If you don't have this issue with this file, it might help to load a image/texture to reproduce the bug.%%%

%%%I appended a example blend file in which the memory increases over time. It started as soon i switched to cycles and have the texture displayed in the viewport. It could mean that the viewport update (uv change) causes the memory leak. All i need to do is grab a pinned vertex again and again. If i grab one from the bigger part the memory goes up by roughly 2 MB every time. If i grab the head part by 300 KB. I purposely tried it very often to be sure to reach the undo limit. But even after i reached it the memory consumption still increases. If you don't have this issue with this file, it might help to load a image/texture to reproduce the bug.%%%

%%%Fix in svn. The amount of memory leaked depended on the number of pinned UV's, this file has many.%%%

%%%Fix in svn. The amount of memory leaked depended on the number of pinned UV's, this file has many.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32402
No description provided.