Fix #32402: live unwrap memory leak, more noticeable if you have many UV's pinned.